<?xml version="1.0"?>
<package format="2">
  <name>ExectutorWidget</name>
  <version>0.2.0</version>
   <description>The  package contains ui for execution programm</description>
   <maintainer email="vladikkopylov31@gmail.com">vlad</maintainer>
 
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>qt_build</build_depend>
  <build_depend>libqt5-dev</build_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>qt_build</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>
