<?xml version="1.0"?>
<package format="2">
  <name>mainWindow</name>
  <version>0.2.0</version>
  <description>The rviz_widget_custom package create qwidget with custom settings</description>
  <maintainer email="macubuntu@todo.todo">macubuntu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>qt_build</build_depend>
  <build_depend>libqt5-dev</build_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>qt_build</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>
